// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheet \`active\` false matches snapshot 1`] = `""`;

exports[`BottomSheet \`active\` true \`bgColor\` prop matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0,0,0,0.1);
  z-index: 1000;
  overflow-y: hidden;
}

.c1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  background-color: #0680cd;
  border-radius: 4px 4px 0 0;
  min-height: 36px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  />
</div>
`;

exports[`BottomSheet \`active\` true \`bodyStyle\` matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0,0,0,0.1);
  z-index: 1000;
  overflow-y: hidden;
}

.c1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  background-color: #fff;
  border-radius: 4px 4px 0 0;
  min-height: 36px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    style={
      Object {
        "maxHeight": "100px",
      }
    }
  />
</div>
`;

exports[`BottomSheet \`active\` true \`children\` matches snapshot 1`] = `
.c2 {
  fill: #fff;
  vertical-align: top;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0,0,0,0.1);
  z-index: 1000;
  overflow-y: hidden;
}

.c1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  background-color: #fff;
  border-radius: 4px 4px 0 0;
  min-height: 36px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  >
    <svg
      aria-label="open customize and profile menu"
      className="c2"
      color="#fff"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
    >
      <title>
        menu icon
      </title>
      <desc>
        hamburger menu icon
      </desc>
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
      />
    </svg>
  </div>
</div>
`;

exports[`BottomSheet \`active\` true \`delay\` matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0,0,0,0.1);
  z-index: 1000;
  overflow-y: hidden;
}

.c1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  background-color: #fff;
  border-radius: 4px 4px 0 0;
  min-height: 36px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: all 0ms cubic-bezier(0.4,0,0.2,1);
  transition: all 0ms cubic-bezier(0.4,0,0.2,1);
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  />
</div>
`;

exports[`BottomSheet \`active\` true \`height\` matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0,0,0,0.1);
  z-index: 1000;
  overflow-y: hidden;
}

.c1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  background-color: #fff;
  border-radius: 4px 4px 0 0;
  min-height: 36px;
  height: 10em;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
    height="10em"
    onClick={[Function]}
  />
</div>
`;

exports[`BottomSheet \`active\` true \`onOverlayClick\` matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0,0,0,0.1);
  z-index: 1000;
  overflow-y: hidden;
}

.c1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  background-color: #fff;
  border-radius: 4px 4px 0 0;
  min-height: 36px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  overflow: hidden;
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
    onClick={[Function]}
  />
</div>
`;

exports[`BottomSheet \`active\` true \`overlayStyle\` matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0,0,0,0.1);
  z-index: 1000;
  overflow-y: hidden;
}

.c1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  background-color: #fff;
  border-radius: 4px 4px 0 0;
  min-height: 36px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  overflow: hidden;
}

<div
  className="c0"
  style={
    Object {
      "border": "solid 1px #e8e5e2",
    }
  }
>
  <div
    className="c1"
    onClick={[Function]}
  />
</div>
`;

exports[`BottomSheet \`active\` true \`textColor\` matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0,0,0,0.1);
  z-index: 1000;
  overflow-y: hidden;
}

.c1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  color: #fff;
  background-color: #fff;
  border-radius: 4px 4px 0 0;
  min-height: 36px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  transition: all 300ms cubic-bezier(0.4,0,0.2,1);
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  />
</div>
`;

exports[`BottomSheet \`active\` true matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0,0,0,0.1);
  z-index: 1000;
  overflow-y: hidden;
}

.c1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  background-color: #fff;
  border-radius: 4px 4px 0 0;
  min-height: 36px;
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
  -webkit-transition: all 300ms cubic-bezier(0,0,0.2,1);
  transition: all 300ms cubic-bezier(0,0,0.2,1);
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
  />
</div>
`;
